@@ -154,6 +154,9 @@ C-API
 Library
 -------
 
+- Issue #5949: added check for correct lineends in input from IMAP server
+  in imaplib.
+
 - Add a reverse() method to collections.deque().
 
 - Issue #6986: Fix crash in the JSON C accelerator when called with the
